# chessroom

./: LICENSE  README.md  pyproject.toml
shipboard/: main.py  pyproject.toml
shipboard/board/: utils.py
shipboard/field/: board.py  coordinate_manager.py
shipboard/gameplay/: board.py  cell.py  constants.py  exceptions.py
shipboard/ships/: ship.py
shipboard/utils/: constants.py  exceptions.py
tests/: test_board.py  test_coordinate.py
